--- a/McsaMeetsMailer/wwwroot/css/FullSchedulePreview.less
+++ b/McsaMeetsMailer/wwwroot/css/FullSchedulePreview.less
@@ -5,16 +5,22 @@
         padding: 5px;
     }
 
+    tr:nth-child(odd) {
+        background-color: #F3F3F3;
+    }
+
+    tr:nth-child(even) {
+        background-color: white;
+    }
+
     th {
         padding: 10px;
         background-color: black;
         color: white;
-        border: 1px solid grey;
         font-style: normal;
     }
 
     td {
         padding: 10px;
-        border: 1px solid #dcdee2;
     }
 }
