--- a/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
@@ -1,10 +1,23 @@
 ﻿<table>
     <tr>
-        <!--#HeaderHeading-->
+        <!--HeaderHeading-->
         <th style="background: black; color: white">{Heading}</th>
     </tr>
+    <!--HeaderValues-->
     <tr>
-        <!--#HeaderValue-->
+        <!--HeaderValue-->
+        <td>{Value}</td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <!--Heading-->
+        <th style="background: black; color: white">{Heading}</th>
+    </tr>
+    <!--Values-->
+    <tr>
+        <!--Value-->
         <td>{Value}</td>
     </tr>
 </table>
