--- a/McsaMeetsMailer/Pages/MeetSheet.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheet.cshtml
@@ -5,6 +5,7 @@
 }
 
 <p>
+  Filter by leader
   <select id="leaders" onchange="refreshContentFrame()">
     <option value="All">All</option>
     @{
