Removing unneeded stuff.

--- a/McsaMeetsMailer/Pages/Shared/_Layout.cshtml
+++ b/McsaMeetsMailer/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - McsaMeetsMailer</title>
+    <title>@ViewData["Title"] - MCSA-KZN Meets Mailer</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -37,8 +37,6 @@
             </div>
         </div>
     </nav>
-
-    <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
         @RenderBody()
