Fix - details table info should be by row

--- a/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
@@ -11,13 +11,9 @@
 </table>
 
 <table>
+    <!--Details-->
     <tr>
-        <!--Heading-->
-        <th style="background: black; color: white">{Heading}</th>
-    </tr>
-    <!--Values-->
-    <tr>
-        <!--Value-->
+        <td>{Title}</td>
         <td>{Value}</td>
     </tr>
 </table>
