Removing unneeded stuff.

--- a/McsaMeetsMailer/Pages/MeetSheet.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheet.cshtml
@@ -7,7 +7,7 @@
 <p>
   Filter by leader
   <select id="leaders" onchange="refreshContentFrame()">
-    <option value="All">All</option>
+    <option value="All">ALL</option>
     @{
       foreach (var leaderName in Model.LeaderNames)
       {
