--- a/McsaMeetsMailer/Pages/Shared/_Layout.cshtml
+++ b/McsaMeetsMailer/Pages/Shared/_Layout.cshtml
@@ -26,13 +26,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">McsaMeetsMailer</a>
+                <a asp-page="/Index" class="navbar-brand">MCSA-KZN Meets Mailer</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
