--- a/McsaMeetsMailer/Pages/MeetSheetLeaderPreview.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheetLeaderPreview.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model McsaMeetsMailer.Pages.MeetSheetModel
+@model McsaMeetsMailer.Pages.MeetSheetLeaderPreview
 @{
-  ViewData["Title"] = "Meet Sheet";
+  ViewData["Title"] = "Leader Preview";
 }
 
 <p>
