--- a/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
@@ -13,8 +13,8 @@
     <tr>
         <!--HeaderValue-->
         <td>{Value}</td>
-        <!--Link Value-->
-        <td><a href="#{Value}">{Value}</a></td>
+        <!--HeaderLinkValue-->
+        <td><a href="https://localhost:44358/fullschedulepreview#{Value}">{Value}</a></td>
     </tr>
 </table>
 
