--- a/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
@@ -10,7 +10,7 @@
   <label class="label label-default">Email Subject</label>
   <input id="emailSubject" type="text" class="form-control input-sm" maxlength="64" value="MCSA-KZN Meet Sheet : @monthName" />
   <label class="label label-default">Email Body</label>
-  <textarea id="emailBody" class="form-control input-sm" rows="3" maxlength="512">Hi&#10;&#13;Please find the latest Meet Sheet below.</textarea>
+  <textarea id="emailBody" class="form-control input-sm" rows="3" maxlength="512">Hi&#10;&#13;Please find the latest MCSA-KZN Meet Sheet below.</textarea>
 </div>
 
 <div class="container">
