Hightlight invalid fields in summary table in preview mode

--- a/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
@@ -58,6 +58,16 @@
                 <b>{Value}</b>
             </td>
         </tr>
+        <!--DetailHeader_Invalid-->
+        <tr style="background-color: lightgray">
+            <td style="border: 2px solid white; padding: 10px; width: 20%;">
+                <b>{Title}</b>
+            </td>
+
+            <td style="border: 2px solid white; padding: 10px; width: 80%;">
+                <b>{Value}</b>
+            </td>
+        </tr>
         <!--Detail-->
         <tr>
             <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3; width: 20%;">
@@ -65,6 +75,16 @@
             </td>
 
             <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3; width: 20%;">
+                {Value}
+            </td>
+        </tr>
+        <!--Detail_Invalid-->
+        <tr>
+            <td style="border: 2px solid white; padding: 10px; background-color: red; width: 20%;">
+                {Title}
+            </td>
+
+            <td style="border: 2px solid white; padding: 10px; background-color: red; width: 20%;">
                 {Value}
             </td>
         </tr>
