Included a link to the online schedule.

--- a/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/Pages/Templates/FullScheduleEmailTemplate.html
@@ -1,4 +1,8 @@
-﻿<p>{CustomMessage}</p>
+﻿<p style="display: {CustomMessageDisplayStyle};">{CustomMessage}</p>
+
+<br>
+
+<p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">View the schedule online <a href="{OnlineScheduleUrl}">here</a>.</p>
 
 <br>
 
