Header & footer images for the Meets page.

--- a/McsaMeetsMailer/Pages/Meets.cshtml
+++ b/McsaMeetsMailer/Pages/Meets.cshtml
@@ -4,4 +4,8 @@
   ViewData["Title"] = "MCSA-KZN Meets";
 }
 
+<img src="@Url.Content("images/header.jpg")" class="img-responsive" />
+
 @Html.Raw(Model.Html)
+
+<img src="@Url.Content("images/footer.jpg")" class="img-responsive" />
